<resources>
    <string name="app_name">Alarm Manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_alarm_manager">Alarm Manager</string>
    <string name="icono_alarm_manager">Icono Alarm Manager</string>
    <string name="calendario">Calendario</string>
    <string name="alarmas">Alarmas</string>
    <string name="home">Home</string>
    <string name="nombre_usuario_mock">Pepito Pérez</string>
</resources>