<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    android:scrollbars="vertical"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUsuario"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@mipmap/ic_person_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUsuario">


        <Button
            android:id="@+id/btnHome"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_active"
            android:text="@string/home" />

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_inactive"
            android:text="@string/calendario"
            android:textColor="#4C6358" />

        <Button
            android:id="@+id/btnAlarmas"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_inactive"
            android:text="@string/alarmas"
            android:textColor="#4C6358" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nombre_usuario_mock"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ic_baseline_add_alert_24"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:background="@color/background_btn"
        android:foregroundGravity="center"
        android:gravity="center|fill_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/linearSub1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="false"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarma1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 1"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrow1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarma2"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 2"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrow2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarma3"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 3"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrow3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub4"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarma4"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 4"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrow4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="false"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarma5"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 5"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrow5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>