<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_alarmas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingVertical="20dp"
    android:scrollbars="vertical"
    tools:context=".AlarmasFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUsuario"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@mipmap/ic_person_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUsuario">


        <Button
            android:id="@+id/btnHomeConsulta"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_inactive"
            android:text="@string/home"
            android:textColor="@color/text_gray" />

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_inactive"
            android:text="@string/calendario"
            android:textColor="#4C6358" />

        <Button
            android:id="@+id/btnAlarmas"
            android:layout_width="100dp"
            android:layout_height="74dp"
            android:background="@drawable/button_tab_active"
            android:text="@string/alarmas"
            android:textColor="@color/white" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAlarmas"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_add_alert_24"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="363dp"
        android:layout_height="389dp"
        android:layout_marginTop="200dp"
        android:background="@color/background_btn"
        android:foregroundGravity="center"
        android:gravity="center|fill_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:id="@+id/linearSub1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="false"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarmaConsulta1"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 1"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrowConsulta1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarmaConsulta2"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 2"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrowConsulta2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub3"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarmaConsulta3"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 3"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrowConsulta3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub4"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="true"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarmaConsulta4"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 4"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrowConsulta4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearSub5"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/list_tem"
            android:contextClickable="true"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:checked="false"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/tvAlarmaConsulta5"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:text="Alarma próxima 5"
                android:textAlignment="center"
                android:textColor="@color/text_gray" />

            <Button
                android:id="@+id/btnArrowConsulta5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_right_24"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </LinearLayout>

    </LinearLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="363dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:background="@color/secondary"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>